--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,16 @@
   pointer-events: none;
 }
 
+.header {
+  background-image: url('https://www.itl.cat/pngfile/big/13-132771_rainbow-wallpaper-hd-blurry-rainbow.png');
+            background-repeat: repeat; 
+            -webkit-background-clip: text; 
+            -webkit-text-fill-color: transparent;  
+            font-size: 50px; 
+            text-align: center; 
+            font-weight: bold; 
+            text-transform: uppercase;
+}
 
 .App-header {
   background-color: #111214;
@@ -30,53 +40,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-
-.icon-bar {
-  position: fixed;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-/* Style the icon bar links */
-.icon-bar a {
-  display: block;
-  text-align: center;
-  padding: 16px;
-  transition: all 0.3s ease;
-  color: white;
-  font-size: 20px;
-}
-
-/* Style the social media icons with color, if you want */
-.icon-bar a:hover {
-  background-color: #000;
-}
-
-.facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.google {
-  background: #dd4b39;
-  color: white;
-}
-
-.linkedin {
-  background: #007bb5;
-  color: white;
-}
-
-.youtube {
-  background: #bb0000;
-  color: white;
 }
