history added without styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,6 +41,14 @@
   color: #61dafb;
 }
 
+.history{
+  text-align: left;
+  margin-left: 5%;
+}
+.prevSongs {
+  text-align: left;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -49,3 +57,4 @@
     transform: rotate(360deg);
   }
 }
+
