--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,12 +37,12 @@ code {
 } */
 
 .facebook {
-  background: #3B5998;
+  background: rgb(59, 89, 152);
   color: white;
 }
 
 .twitter {
-  background: #55ACEE;
+  background: rgb(85, 172, 238);
   color: white;
 }
 
@@ -60,17 +60,17 @@ code {
 }
 
 .linkedin {
-  background: #007bb5;
+  background: rgb(0, 122, 179);
   color: white;
 }
 
 .contributions {
-  background: #6400b5;
+  background: rgb(100, 0, 181);
   color: white;
 }
 
 .youtube {
-  background: #bb0000;
+  background: rgb(187, 0, 0);
   color: white;
 }
 
