--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
-
 body {
 	text-align: center;
 	background-color: #262626;
@@ -27,7 +26,8 @@ div {
 }
 
 .songname {
-	font-size: 1.5em;
+	font-size: 1.2em;
+	margin: 0;
 	font-family: 'Playfair Display', serif;
 	font-style: italic;
 	color: whitesmoke;
@@ -61,7 +61,7 @@ canvas {
 	height: 150px;
 }
 
-.listInd {	
+.listInd {
 	list-style: none;
 	white-space: nowrap;
 	overflow-x: hidden;
@@ -122,7 +122,7 @@ progress {
 .audioPlayer {
 	padding: 15px;
 	width: 50%;
-	margin: 100px auto;
+	margin: 0px auto;
 	border-radius: 50px;
 	display: flex;
 	justify-content: center;
@@ -131,7 +131,8 @@ progress {
 }
 
 .img {
-	height: 40vmin;
+	height: 30%;
+	margin: 10px;
 	pointer-events: none;
 	transition: .5s ease;
 	backface-visibility: hidden;
@@ -148,7 +149,7 @@ progress {
 	background-repeat: repeat;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-	font-size: 50px;
+	font-size: 45px;
 	text-align: center;
 	font-weight: bold;
 	text-transform: uppercase;
@@ -156,7 +157,7 @@ progress {
 
 .App-header {
 	/* background-color: #262626; */
-	min-height: 10vh;
+	min-height: 7vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -189,5 +190,23 @@ progress {
 	}
 	to {
 		transform: rotate(360deg);
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.icon-bar {
+		top: 35%;
+		transform: translate(-50px,-90px)
+	}
+	.icon:hover {
+		width: 90px;
+		transform: translate(50px, 0);
+		border-radius: 0 35px 35px 0;
+	}
+	.header {
+		font-size: 25px;
+	}
+	.historybox {
+		width: 85%;
 	}
 }
